--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <div class="prompt"> <a = href="https://jakegines.in/" target="_blank"  style="color: lightgreen; text-decoration: underline;">"It's Nuts"</a>  
         <br> <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
          <br>      <div class="input">I have a 5 year plan and it changes everyday</div>
+<a href="ascii-art.txt"></a>
 
         <!--<button id="showAsciiBtn" style="text-decoration: underline;">Double Click to See JWST PSF</button>
       <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
