--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="prompt"> <a = href="https://github.com/BlackPropaganda" target="_blank"  style="color: lightgreen; text-decoration: underline;">"Hackalackin, Not Slackalackin"</a>  
       <div class="prompt"> <a = href="https://jakegines.in/" target="_blank"  style="color: lightgreen; text-decoration: underline;">"It's Nuts"</a>  
         <br> <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
-        <br>      <div class="input">I have a 5 year plan and it changes everyday <br> curl https://EdwardBerman.github.io/its-nuts/ascii-art.txt for a suprise</div>
+        <br>      <div class="input">I have a 5 year plan and it changes everyday <br><br>curl https://EdwardBerman.github.io/its-nuts/ascii-art.txt</div>
 <a href="ascii-art.txt"></a>
 
         <!--<button id="showAsciiBtn" style="text-decoration: underline;">Double Click to See JWST PSF</button>
