--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <div class="prompt">$ Eddie_Berman</div>
+      <div class="prompt">$ Eddie Berman</div>
       <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>
       <br>      <div class="input">Northeastern University <br>COSMOS-Web: The JWST Cosmic Origins Survey  <br><a href="https://gammatau.ai/" target="_blank" style="color: #33ff33;">GammaTau AI</a></div>
       <br>
