--- a/kids.html
+++ b/kids.html
@@ -112,9 +112,19 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
- <div class="prompt">$ Eddie Berman</div>
-  <br>      <div class="input">Music</div>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend</a></div> <br>
+      <br><br>  
+      
+<h2 id="kids">Kids -- PUP (11/20/23)</h2>    
+<h3 id="score">Score</h3>    
+<p>11/10                                                                                                     </p>
+<h3 id="general-thoughts">General Thoughts</h3>    
+<p>I burst out laughing the first time I heard the "Your little songs are getting way too literal. How about some goddamn subtlety for a change?" I hate subtlety, I am an open book :D                                                                                                     </p>
+<h3 id="specifics">Specifics</h3>    
+<p>Morbid Stuff by PUP is a no skip album for me. Every song is just so much fun! But today we're talking about kids. Kids, navigating their way through a godless existence. Of course the song isn't really about god, its about obtaining meaning from the special people in your life because you can't really get it anywhere else. As someone deadset on a career in academia, this song reminds me that my papers mean nothing if I have no friends to share my passion for science. Being an academic is also a great way to make friends! Where else can you find so many people who love science and want to learn science than a University. This is not to say its the ONLY place, but academia is special. Anyway, back to the song. It never ceases to amazing how PUP can write songs that can be quite dark and yet extremely fun to listen to. It's quite a twist that the girl being talked to in the entire songs turns around and tells the singer to essentially grow up, which I guess can argue putting all of your meaning into one person can likewise be unhealthy. 
+    
+</p>    
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6Dgix2xCbnqigfrjulm24R?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 
     </div>
