--- a/get_yourself_a_friend.html
+++ b/get_yourself_a_friend.html
@@ -114,7 +114,7 @@
     <div class="terminal-body"> <br>
       <br><br>  
 
-      <h1 id="music-lyrics-and-story-reviews"><a href="index.html" style="color: #33ff33;">(Home)</a> <br>Music (Lyrics and Story) Reviews</h1>    
+      <h1 id="music-lyrics-and-story-reviews"><a href="index.html" style="color: #33ff33;">(Music Home)</a> <br>Music (Lyrics and Story) Reviews</h1>    
 <p>I am not a musician and I do not tend to be. However, I love a good story, and what are songs if not stories. The lyrics and stories told in a song are what I wish to talk about here.</p>
 <h2 id="handheld-ultra Q">Get Yourself A Friend -- Ultra Q (11/19/23)</h2>    
 <h3 id="score">Score</h3>    
