--- a/kids.html
+++ b/kids.html
@@ -113,7 +113,7 @@
     </div>
     <div class="terminal-body"> <br>
       <br><br>  
-      
+<h1 id="music-lyrics-and-story-reviews"><a href="index.html" style="color: #33ff33;">(Music Home)</a><br>Music (Lyrics and Story) Reviews</h1>       
 <h2 id="kids">Kids -- PUP (11/20/23)</h2>    
 <h3 id="score">Score</h3>    
 <p>11/10                                                                                                     </p>
