--- a/music_page.html
+++ b/music_page.html
@@ -114,8 +114,8 @@
     <div class="terminal-body"> <br>
  <div class="prompt">$ Eddie Berman / Kids <a href="index.html" style="color: #33ff33;">   (Back)</a></div></div>
  <br>      <div class="input">Music</div> <br>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q</a></div> <br>
-  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP</a></div> <br>
+  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q (11/19/23)</a></div> 
+  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP (11/20/23)</a></div> <br>
 
 
     </div>
