--- a/get_yourself_a_friend.html
+++ b/get_yourself_a_friend.html
@@ -10,10 +10,11 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
+            margin: 0;
             font-size: 16px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
-            padding: 0;
+            padding: 500px 0 0 0;
             font-family: monospace;
         }
   #asciiArt {
@@ -38,6 +39,7 @@
     background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
+    padding-top: 140px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -112,22 +114,18 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <br><br>  
+      <div class="prompt">$ Eddie Berman / music / Get Yourself A Friend <a href="music_page.html" style="color: #33ff33;">   (Back)</a><br>
+        <br>               <div class="input"><b>Get Yourself A Friend -- Ultra Q (11/19/23)</b></div> <br>
+                <div class="input"><b>Score</b></div> 
+        <div class="input">10/10</div> <br>
+                <div class="input"><b>General Thoughts</b></div>
+                <div class="input">Bop.</div> <br>
+                <div class="input"><b>Specificss</b></div>
+                <div class="input">The start of the song is the best part. The "Falling asleep to just to hold your hand" part is something that I would normally consider cliche, but in the context of this song I really like it. Rather than focusing on the intimate aspects of a relationship, this song focuses on the kinship. The choice of the word friend when the subject of the song is clearly more than a friend is fascinating, and I like the idea that the singer is dreaming of friendship above all else in his sleep. </div> <br>
+                <div class="input">
+ <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6kwpiJvZLscW06vXl42jjr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div> <br>
 
-      <h1 id="music-lyrics-and-story-reviews"><a href="index.html" style="color: #33ff33;">(Music Home)</a> <br>Music (Lyrics and Story) Reviews</h1>    
-<p>I am not a musician and I do not tend to be. However, I love a good story, and what are songs if not stories. The lyrics and stories told in a song are what I wish to talk about here.</p>
-<h2 id="handheld-ultra Q">Get Yourself A Friend -- Ultra Q (11/19/23)</h2>    
-<h3 id="score">Score</h3>    
-<p>10/10                                                                                                     </p>
-<h3 id="general-thoughts">General Thoughts</h3>    
-<p>Bop.                                                                                                     </p>
-<h3 id="specifics">Specifics</h3>    
-<p>The start of the song is the best part. The "Falling asleep to just to hold your hand" part is something that I would normally consider cliche, but in the context of this song I really like it. Rather than focusing on the intimate aspects of a relationship, this song focuses on the kinship. The choice of the word friend when the subject of the song is clearly more than a friend is fascinating, and I like the idea that the singer is dreaming of friendship above all else in his sleep. 
-    
-</p>    
-
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6kwpiJvZLscW06vXl42jjr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      
     </div>
     </div>
   </div>
