--- a/get_yourself_a_friend.html
+++ b/get_yourself_a_friend.html
@@ -120,7 +120,7 @@
         <div class="input">10/10</div> <br>
                 <div class="input"><b>General Thoughts</b></div>
                 <div class="input">Bop.</div> <br>
-                <div class="input"><b>Specificss</b></div>
+                <div class="input"><b>Specifics</b></div>
                 <div class="input">The start of the song is the best part. The "Falling asleep to just to hold your hand" part is something that I would normally consider cliche, but in the context of this song I really like it. Rather than focusing on the intimate aspects of a relationship, this song focuses on the kinship. The choice of the word friend when the subject of the song is clearly more than a friend is fascinating, and I like the idea that the singer is dreaming of friendship above all else in his sleep. </div> <br>
                 <div class="input">
  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6kwpiJvZLscW06vXl42jjr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
