--- a/tank.html
+++ b/tank.html
@@ -10,10 +10,11 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
+            margin: 0;
             font-size: 16px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
-            padding: 0;
+            padding: 500px 0 0 0;
             font-family: monospace;
         }
   #asciiArt {
@@ -38,6 +39,7 @@
     background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
+    padding-top: 140px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -112,15 +114,19 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
- <div class="prompt">$ Eddie Berman / music <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Music</div> <br>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q (11/19/23)</a></div> 
-  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP (11/20/23)</a></div> 
-  <div class="prompt">&gt; <a href="tank.html" style="color: #33ff33;">Tank! -- SEATBELTS (11/21/23)</a></div> 
+      <div class="prompt">$ Eddie Berman / music / Tank! <a href="music_page.html" style="color: #33ff33;">   (Back)</a><br>
+        <br>               <div class="input"><b>Tank! -- Seatbelts (11/21/23)</b></div> <br>
+                <div class="input"><b>Score</b></div> 
+        <div class="input">See You Space Cowboy.../10</div> <br>
+                <div class="input"><b>General Thoughts</b></div>
+                <div class="input">This is really just an excuse for me to talk about Cowboy Bebop</div> <br>
+                <div class="input"><b>Specifics</b></div>
+                <div class="input">It's Cowboys! It's space! Seriously, what's there not to love. The song is just so... idk. chef's kiss :3.  
+                </div> <br>
+                <div class="input">
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Wi5ubKr8zSk8L3CLemyS4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div> <br>
 
-  <br>
-
-    </div>
     </div>
     </div>
   </div>
