--- a/songs/good_ass_intro.html
+++ b/songs/good_ass_intro.html
@@ -10,10 +10,11 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
+            margin: 0;
             font-size: 16px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
-            padding: 0;
+            padding: 500px 0 0 0;
             font-family: monospace;
         }
   #asciiArt {
@@ -38,6 +39,7 @@
     background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
+    padding-top: 280px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -112,16 +114,18 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
- <div class="prompt">$ Eddie Berman / music <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Music</div> <br>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q (11/19/23)</a></div> 
-  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP (11/20/23)</a></div> 
-  <div class="prompt">&gt; <a href="tank.html" style="color: #33ff33;">Tank! -- SEATBELTS (11/21/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/good_ass_intro.html" style="color: #33ff33;">Good Ass Intro -- Chance The Rapper, BJ The Chicago Kid, Lili K (11/22/23)</a></div> 
+      <div class="prompt">$ Eddie Berman / music / good ass intro <a href="../music_page.html" style="color: #33ff33;">   (Back)</a><br>
+        <br>               <div class="input"><b>Good Ass Intro -- Chance The Rapper, BJ The Chicago Kid, Lili K (11/22/23)</b></div> <br>
+                <div class="input"><b>Score</b></div> 
+        <div class="input">Better than I was /10</div> <br>
+                <div class="input"><b>General Thoughts</b></div>
+                <div class="input">I'm tired of people over thinking intro tracks. This is just a good ass intro!</div> <br>
+                <div class="input"><b>Specifics</b></div>
+                <div class="input">Cocoa Butter Kisses is the best track on this record (forgiving me for sounding like Anthony Fantano for calling it a record I've always wanted to do that), but I adore this song. It's a very fitting introduction to the rest of the album, upbeat piano strokes, it says "we're back" and "even better than we were the last time", which, are two things I think anyone wants to hear in the introduction to an album. Moreover, Chance holds up his end of the bargain. He is in fact back and better than he was the last time. People often criticize eminem for rapping fast because he has the skillset to do so, even when rapping fast isn't suitable for the song. This song is a great example of how you can rap really fast to generate some momentum, but also slow down to annunciate crucial aspects like with the verses in the middle of the song. </div> <br>
+                <div class="input">
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/23Ij3xEFmYkRl00dDJCVMP?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div> <br>
 
-  <br>
-
-    </div>
     </div>
     </div>
   </div>
