--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>
       <br>      <div class="input">Northeastern University <br>COSMOS-Web: The JWST Cosmic Origins Survey  <br><a href="https://gammatau.ai/" target="_blank" style="color: #33ff33;">GammaTau AI</a></div>
       <br>
-      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a></div> 
+      <div class="prompt">&gt; CV <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">(PDF)</a> <a href="bio.html" style="color: #33ff33;">(HTML, Abbreviated)</a></div> 
       <div class="prompt">&gt; <a href="research_statement.pdf" target="_blank" style="color: #33ff33;">Research Statement</a></div> 
       <div class="prompt">&gt; <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a></div> 
       <div class="prompt">&gt; <a href="https://orcid.org/0000-0002-8494-3123" target="_blank" style="color: #33ff33;">ORCID</a></div> 
