--- a/music_page.html
+++ b/music_page.html
@@ -22,6 +22,11 @@
             font-family: monospace;
         }
   body {
+    background-image: url('music.jpg');    
+    background-size: cover; /* Cover the entire window */    
+    background-position: center center; /* Center the image in the window */    
+    background-attachment: fixed;
+
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
     color: #33ff33;
@@ -35,7 +40,8 @@
   }
 
   .terminal {
-    background-color: #0d0d0d;
+    background-color: rgba(13, 13, 13, 0.9);
+    /*background-color: #0d0d0d;*/
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
