--- a/songs/RHM.html
+++ b/songs/RHM.html
@@ -10,10 +10,11 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
+            margin: 0;
             font-size: 16px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
-            padding: 0;
+            padding: 500px 0 0 0;
             font-family: monospace;
         }
   #asciiArt {
@@ -22,11 +23,6 @@
             font-family: monospace;
         }
   body {
-    background-image: url('music.jpg');    
-    background-size: cover; /* Cover the entire window */    
-    background-position: center center; /* Center the image in the window */    
-    background-attachment: fixed;
-
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
     color: #33ff33;
@@ -40,10 +36,10 @@
   }
 
   .terminal {
-    background-color: rgba(13, 13, 13, 0.9);
-    /*background-color: #0d0d0d;*/
+    background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
+    padding-top: 280px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -118,17 +114,18 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
- <div class="prompt">$ Eddie Berman / music <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Music</div> <br>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q (11/19/23)</a></div> 
-  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP (11/20/23)</a></div> 
-  <div class="prompt">&gt; <a href="tank.html" style="color: #33ff33;">Tank! -- SEATBELTS (11/21/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/good_ass_intro.html" style="color: #33ff33;">Good Ass Intro -- Chance The Rapper, BJ The Chicago Kid, Lili K (11/22/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/RHM.html" style="color: #33ff33;">RHM -- Paris Texas (11/23/23)</a></div> 
+      <div class="prompt">$ Eddie Berman / music / RHM <a href="../music_page.html" style="color: #33ff33;">   (Back)</a><br>
+        <br>               <div class="input"><b>RHM -- Paris Texas (11/23/23)</b></div> <br>
+                <div class="input"><b>Score</b></div> 
+        <div class="input">Right Hand Man /10</div> <br>
+                <div class="input"><b>General Thoughts</b></div>
+                <div class="input">Cool concept but one with room to improve </div> <br>
+                <div class="input"><b>Specifics</b></div>
+                <div class="input">The rest of this EP has its ups and downs, but this is really cool. The sort of underwater feel is enticing, even if the lyrics are repetitive and not very enriching. </div> <br>
+                <div class="input">
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1vbFYoFmuTjONahcoQ3BTi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div> <br>
 
-  <br>
-
-    </div>
     </div>
     </div>
   </div>
