--- a/songs/salad.html
+++ b/songs/salad.html
@@ -121,7 +121,7 @@
                 <div class="input"><b>General Thoughts</b></div>
                 <div class="input">Upbeat, ocassionally I'll study / read papers to this song </div> <br>
                 <div class="input"><b>Specifics</b></div>
-                <div class="input">Cut the crap like shit barbers! I don't really know what the thesis of this song is. Seems just like a personal reflection, but it doesn't have much sentence other than some basic judgements about other musicians / state of music in general. Some brags are thrown in as well. Lyrically this song doesn't really mean much to me but it's still fun vibez.</div> <br>
+                <div class="input">Cut the crap like shit barbers! I don't really know what the thesis of this song is. Seems just like a personal reflection, but it doesn't have much sructure other than some basic judgements about other musicians / state of music in general. Some brags are thrown in as well. Lyrically this song doesn't really mean much to me but it's still fun vibez.</div> <br>
                 <div class="input">
                   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1jzIJcHCXneHw7ojC6LXiF?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div> <br>
