--- a/music_page.html
+++ b/music_page.html
@@ -127,7 +127,7 @@
   <div class="prompt">&gt; <a href="songs/RHM.html" style="color: #33ff33;">RHM -- Paris Texas (11/23/23)</a></div> 
   <div class="prompt">&gt; <a href="songs/funky.html" style="color: #33ff33;">Funky Galileo -- Sure Sure (11/24/23)</a></div> 
   <div class="prompt">&gt; <a href="songs/salad.html" style="color: #33ff33;">Potato Salad -- Tyler, The Creator, A$AP Rocky (11/25/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/idiot.html" style="color: #33ff33;">American Idiot -- Greenday (11/26/23)</a></div> 
+  <div class="prompt">&gt; <a href="songs/idiot.html" style="color: #33ff33;">American Idiot -- Green Day (11/26/23)</a></div> 
 
   <br>
 
