--- a/songs/idiot.html
+++ b/songs/idiot.html
@@ -39,7 +39,7 @@
     background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
-    padding-top: 100px;
+    padding-top: 140px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -115,7 +115,7 @@
     </div>
     <div class="terminal-body"> <br>
       <div class="prompt">$ Eddie Berman / music / American Idiot <a href="../music_page.html" style="color: #33ff33;">   (Back)</a><br>
-        <br>               <div class="input"><b>American Idiot -- Greenday (11/26/23)</b></div> <br>
+        <br>               <div class="input"><b>American Idiot -- Green Day (11/26/23)</b></div> <br>
                 <div class="input"><b>Score</b></div> 
         <div class="input">Don't wanna be an American Idiot /10</div> <br>
                 <div class="input"><b>General Thoughts</b></div>
