--- a/songs/fmh.html
+++ b/songs/fmh.html
@@ -10,10 +10,11 @@
             border: none;
             color: lightgreen;
             line-height: 1.5;
+            margin: 0;
             font-size: 16px; /* Set the font size */
             /*text-decoration: underline;*/
             cursor: pointer;
-            padding: 0;
+            padding: 500px 0 0 0;
             font-family: monospace;
         }
   #asciiArt {
@@ -22,11 +23,6 @@
             font-family: monospace;
         }
   body {
-    background-image: url('music.jpg');    
-    background-size: cover; /* Cover the entire window */    
-    background-position: center center; /* Center the image in the window */    
-    background-attachment: fixed;
-
     background-color: #0a0a0a;
     font-family: 'Courier New', Courier, monospace;
     color: #33ff33;
@@ -40,10 +36,10 @@
   }
 
   .terminal {
-    background-color: rgba(13, 13, 13, 0.9);
-    /*background-color: #0d0d0d;*/
+    background-color: #0d0d0d;
     border-radius: 5px;
     padding: 20px;
+    padding-top: 140px;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
     width: 80%; /* Adjust the width as per your requirement */
     max-width: 1000px; /* Optional: if you want to limit the maximum width */
@@ -118,21 +114,18 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
- <div class="prompt">$ Eddie Berman / music <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Music</div> <br>
-  <div class="prompt">&gt; <a href="get_yourself_a_friend.html" style="color: #33ff33;">Get Yourself A Friend -- Ultra Q (11/19/23)</a></div> 
-  <div class="prompt">&gt; <a href="kids.html" style="color: #33ff33;">Kids -- PUP (11/20/23)</a></div> 
-  <div class="prompt">&gt; <a href="tank.html" style="color: #33ff33;">Tank! -- SEATBELTS (11/21/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/good_ass_intro.html" style="color: #33ff33;">Good Ass Intro -- Chance The Rapper, BJ The Chicago Kid, Lili K (11/22/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/RHM.html" style="color: #33ff33;">RHM -- Paris Texas (11/23/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/funky.html" style="color: #33ff33;">Funky Galileo -- Sure Sure (11/24/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/salad.html" style="color: #33ff33;">Potato Salad -- Tyler, The Creator, A$AP Rocky (11/25/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/idiot.html" style="color: #33ff33;">American Idiot -- Green Day (11/26/23)</a></div> 
-  <div class="prompt">&gt; <a href="songs/fmh.html" style="color: #33ff33;">Featuring Mark Hoppus -- Hot Mulligan (11/27/23)</a></div> 
+      <div class="prompt">$ Eddie Berman / music / Featuring Mark Hoppus <a href="../music_page.html" style="color: #33ff33;">   (Back)</a><br>
+        <br>               <div class="input"><b>Featuring Mark Hoppus -- Hot Mulligan (11/27/23)</b></div> <br>
+                <div class="input"><b>Score</b></div> 
+        <div class="input">2021 /10</div> <br>
+                <div class="input"><b>General Thoughts</b></div>
+                <div class="input">I've really grown apart from some of high school friends, song hits a little too hard now D: .</div> <br>
+                <div class="input"><b>Specifics</b></div>
+                <div class="input">I really like this bands style. They claim the genre is post emo, IDK what that means... but the song is cool. But yeah, the song. The screachy tones combined with the upbeat guitar wierdly work. Lyrics are actually pretty thought out. The song weaves in personal monologues with cries out to the person (people) from high school in really clever ways. Moreso the song is being spoken TOO someone, but there are definately parts where the singer is just lamenting to themself. And that's OK, adds some color to the lyrics beyond just some impassioned rant that someone else is supposed to hear.</div> <br>
+                <div class="input">
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/41hMYBgv6teOnu64kn4Ylb?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div> <br>
 
-  <br>
-
-    </div>
     </div>
     </div>
   </div>
