--- a/index.html
+++ b/index.html
@@ -127,11 +127,10 @@
       <div class="prompt">&gt; <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a></div> 
       <div class="prompt">&gt; <a href="https://orcid.org/0000-0002-8494-3123" target="_blank" style="color: #33ff33;">ORCID</a></div> 
       <div class="prompt">&gt; <a href="https://www.linkedin.com/in/edward-berman-324a86226/" target="_blank" style="color: #33ff33;">LinkedIn</a></div> 
+      <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Blog</a></div> 
       <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> 
 
-      <br>
-      <div class="prompt">&gt; <a = href="https://github.com/BlackPropaganda" target="_blank"  style="color: #33ff33; text-decoration: underline;">"Hackalackin, Not Slackalackin"</a>  
-        <br> <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
+        <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
         <br>      <div class="input">curl https://EdwardBerman.github.io/its-nuts/ascii-art.txt</div>
       </div>
 <a href="ascii-art.txt"></a>
