--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="prompt">&gt; <a href="https://orcid.org/0000-0002-8494-3123" target="_blank" style="color: #33ff33;">ORCID</a></div> 
       <div class="prompt">&gt; <a href="https://www.linkedin.com/in/edward-berman-324a86226/" target="_blank" style="color: #33ff33;">LinkedIn</a></div> 
       <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div> 
-      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> 
+      <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
         <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
         <br>      <div class="input">curl https://EdwardBerman.github.io/its-nuts/ascii-art.txt</div>
