--- a/blog.html
+++ b/blog.html
@@ -123,6 +123,7 @@
  <div class="prompt">&gt; <a href="blogs/mlpde.pdf" target="_blank" style="color: #33ff33;">Machine Learning Model Discovery : Connecting Random Walks and Partial Differential Equations (10/22/2022)</a></div> 
  <br>      <div class="input">Blog</div> <br>
  <div class="prompt">&gt; <a href="blogs/mlpl.pdf" target="_blank" style="color: #33ff33;">Revisiting the Interplay Between Machine Learning and Programming Languages (11/28/23)</a></div> 
+ <div class="prompt">&gt; <a href="blogs/year.pdf" target="_blank" style="color: #33ff33;">Year of Extraversion (12/30/23)</a></div> 
 
   <br>
 
