--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
         <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
-        <br>      <div class="input">curl https://EdwardBerman.github.io/its-nuts/ascii-art.txt</div>
+        <br>      <div class="input">curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
       </div>
 <a href="ascii-art.txt"></a>
 
