--- a/index.html
+++ b/index.html
@@ -119,9 +119,12 @@
     </div>
     <div class="terminal-body"> <br>
       <div class="prompt">$ Eddie Berman  &lambda;<sub>&Theta;</sub>x.x</div>
-      <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>
-      <br>      <div class="input">Northeastern University <br>COSMOS-Web: The JWST Cosmic Origins Survey  <br><a href="https://gammatau.ai/" target="_blank" style="color: #33ff33;">GammaTau AI</a></div>
-      <br>
+      <br><div class="input">News</div> 
+      <div class="prompt">&gt; (01/21/24) ShOpt.jl has been submitted to the astronomical journal! <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">arXiv</a></div> 
+      <!--      <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>-->
+      <br><div class="input">Currently</div> 
+      <div class="prompt">&gt; Northeastern University <br>&gt; COSMOS-Web: The JWST Cosmic Origins Survey  <br>&gt; <a href="https://gammatau.ai/" target="_blank" style="color: #33ff33;">GammaTau AI</a></div>
+      <br><div class="input">Links</div> 
       <div class="prompt">&gt; CV <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">(PDF)</a> <a href="bio.html" style="color: #33ff33;">(HTML, Abbreviated)</a></div> 
       <div class="prompt">&gt; <a href="research_statement.pdf" target="_blank" style="color: #33ff33;">Research Statement</a></div> 
       <div class="prompt">&gt; <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a></div> 
@@ -130,8 +133,10 @@
       <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div> 
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
-        <br>      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
-        <br>      <div class="input">curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
+      <br><div class="input">Contact me</div> 
+      <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
+      <br><div class="input">Fun</div> 
+        <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
       </div>
 <a href="ascii-art.txt"></a>
 
