--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,7 @@
  <br>      <div class="input">Blog</div> <br>
  <div class="prompt">&gt; <a href="blogs/mlpl.pdf" target="_blank" style="color: #33ff33;">Revisiting the Interplay Between Machine Learning and Programming Languages (11/28/23)</a></div> 
  <div class="prompt">&gt; <a href="blogs/year.pdf" target="_blank" style="color: #33ff33;">Year of Extraversion (12/30/23)</a></div> 
-
+ <div class="prompt">&gt; <a href="blogs/bs.pdf" target="_blank" style="color: #33ff33;">On research and bullshit jobs (02/07/24)</a></div> 
   <br>
 
     </div>
