--- a/blog.html
+++ b/blog.html
@@ -119,9 +119,9 @@
     </div>
     <div class="terminal-body"> <br>
  <div class="prompt">$ Eddie Berman / blog <a href="index.html" style="color: #33ff33;">   (Back)</a></div>
- <br>      <div class="input">Articles (some coherent thoughts mb)</div> <br>
+ <br>      <div class="input">Articles</div> <br>
  <div class="prompt">&gt; <a href="blogs/mlpde.pdf" target="_blank" style="color: #33ff33;">Machine Learning Model Discovery : Connecting Random Walks and Partial Differential Equations (10/22/2022)</a></div> 
- <br>      <div class="input">Blog (mostly gibberish)</div> <br>
+ <br>      <div class="input">Blog / Shortform</div> <br>
  <div class="prompt">&gt; <a href="blogs/mlpl.pdf" target="_blank" style="color: #33ff33;">Revisiting the Interplay Between Machine Learning and Programming Languages (11/28/23)</a></div> 
  <div class="prompt">&gt; <a href="blogs/year.pdf" target="_blank" style="color: #33ff33;">Year of Extraversion (12/30/23)</a></div> 
  <div class="prompt">&gt; <a href="blogs/bs.pdf" target="_blank" style="color: #33ff33;">On research and bullshit jobs (02/07/24)</a></div> 
