--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
     </div>
     <div class="terminal-body"> <br>
       <div class="prompt">$ Eddie Berman  &lambda;<sub>&Theta;</sub>x.x</div>
+      <br><div class="input">Research Areas</div> 
+      <div class="prompt">&gt; Numerical Linear Algebra, Optimization, Astronomy, AI, PL</div> 
       <br><div class="input">News</div> 
       <div class="prompt">&gt; (01/21/24) ShOpt.jl has been submitted to the astronomical journal! <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">arXiv</a></div> 
       <!--      <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>-->
