--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
       <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
       <br><div class="input">Fun</div> 
         <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
-<div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
+<!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
 <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
-      </div>
+-->    </div>
 <a href="ascii-art.txt"></a>
      </div>
         <!--<button id="showAsciiBtn" style="text-decoration: underline;">Double Click to See JWST PSF</button>
