--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
       <br><div class="input">Fun</div> 
         <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
-        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant. This is also my discord, if you would like to reach me through that medium</div>
+        <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
 <!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
 <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
 -->    </div>
