--- a/index.html
+++ b/index.html
@@ -125,15 +125,9 @@
       <!-- <div class="prompt">&gt; (02/27/24) I'll be giving an invited talk at Columbia University. Come say hi :)</div> -->
       <div class="prompt">&gt; (01/21/24) ShOpt.jl has been submitted to the astronomical journal! <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">arXiv</a></div> 
       <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> 
-      <!--      <br>      <div class="input">Optimization, Numerical Linear Algebra, Astronomy, AI, PL</div>-->
-      <br><div class="input">Currently</div> 
-      <div class="prompt">&gt; Northeastern University <br>&gt; COSMOS-Web: The JWST Cosmic Origins Survey  <br>&gt; <a href="https://gammatau.ai/" target="_blank" style="color: #33ff33;">GammaTau AI</a></div>
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; CV <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">(PDF)</a> <a href="bio.html" style="color: #33ff33;">(HTML, Abbreviated)</a></div> 
-      <div class="prompt">&gt; <a href="research_statement.pdf" target="_blank" style="color: #33ff33;">Research Statement</a></div> 
       <div class="prompt">&gt; <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a></div> 
-      <!--      <div class="prompt">&gt; <a href="https://orcid.org/0000-0002-8494-3123" target="_blank" style="color: #33ff33;">ORCID</a></div> -->
-      <!--      <div class="prompt">&gt; <a href="https://www.linkedin.com/in/edward-berman-324a86226/" target="_blank" style="color: #33ff33;">LinkedIn</a></div> -->
       <div class="prompt">&gt; <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a></div> 
       <br><div class="input">Writing</div> 
       <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div> 
@@ -141,10 +135,10 @@
 
       <br><div class="input">Contact me</div> 
       <div class="input">&gt; berman [dot] ed [at] northeastern [dot] edu</div>
-      <br><div class="input">Fun</div> 
-      <!-- <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>-->
+      <!-- <br><div class="input">Fun</div> 
+       <div class="input">&gt; curl https://EdwardBerman.github.io/personal-website/ascii-art.txt</div>
         <div class="input">&gt; My online handle is often <b>bermanator</b> or some variant</div>
-        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div>
+        <div class="input">&gt; I daily drive a System76 Lemur Pro running PopOS with bspwn. My <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">dotfiles</a> are inspired by <a href="https://github.com/SeniorMars/dotfiles" target="_blank" style="color: #33ff33;">SirCharlieMars</a>, <a href="https://github.com/JakeGinesin/dotfiles" target="_blank" style="color: #33ff33;">Jake Ginesin</a>, <a href="https://github.com/cassanof/dotfiles" target="_blank" style="color: #33ff33;">Federico Cassano</a>, and <a href="https://github.com/VaughnValle/blue-sky" target="_blank" style="color: #33ff33;">VaughnValle</a> </div> -->
 <!-- <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/animelist/bermanator29?">My Anime List</a></div>
 <div class="input">&gt; <a target="_blank" style="color: #33ff33;" href="https://myanimelist.net/mangalist/bermanator29?">My Manga List</a></div>
 -->    </div>
