--- a/index.html
+++ b/index.html
@@ -119,14 +119,12 @@
     </div>
     <div class="terminal-body"> <br>
       <div class="prompt">$ Eddie Berman  &lambda;<sub>&Theta;</sub>x.x</div>
-      <br><div class="input">Research Areas</div> 
-      <div class="prompt">&gt; Numerical Linear Algebra, Optimization, Astronomy, AI, PL</div> 
       <br><div class="input">News</div> 
       <!-- <div class="prompt">&gt; (02/27/24) I'll be giving an invited talk at Columbia University. Come say hi :)</div> -->
       <div class="prompt">&gt; (01/21/24) ShOpt.jl has been submitted to the astronomical journal! <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">arXiv</a></div> 
       <div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> 
       <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">(CV PDF)</a>, <a href="bio.html" style="color: #33ff33;">(CV HTML; Abbreviated)</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a> </div> 
+      <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a> </div> 
       <br><div class="input">Writing</div> 
       <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div> 
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
