--- a/blog.html
+++ b/blog.html
@@ -122,9 +122,7 @@
  <br>      <div class="input">Articles</div> <br>
  <div class="prompt">&gt; <a href="blogs/mlpde.pdf" target="_blank" style="color: #33ff33;">Machine Learning Model Discovery : Connecting Random Walks and Partial Differential Equations (10/22/2022)</a></div> 
  <br>      <div class="input">Blog / Shortform</div> <br>
- <div class="prompt">&gt; <a href="blogs/mlpl.pdf" target="_blank" style="color: #33ff33;">Revisiting the Interplay Between Machine Learning and Programming Languages (11/28/23)</a></div> 
- <div class="prompt">&gt; <a href="blogs/year.pdf" target="_blank" style="color: #33ff33;">Year of Extraversion (12/30/23)</a></div> 
- <div class="prompt">&gt; <a href="blogs/bs.pdf" target="_blank" style="color: #33ff33;">On research and bullshit jobs (02/07/24)</a></div> 
+ <div class="prompt">&gt; Coming Soon </div> 
   <br>
 
     </div>
