--- a/peeps.html
+++ b/peeps.html
@@ -118,7 +118,7 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <div class="prompt">Eddie Berman / A List of People I know <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
+      <div class="prompt">Eddie Berman / A List of People I Know <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
 
         <div class="prompt">&gt; <a href="https://priime.dev/about" style="color: #33ff33;" target="_blank">Lucus</a> </div> 
         <div class="prompt">&gt; <a href="https://jakegines.in/" style="color: #33ff33;" target="_blank">Jake</a> </div> 
