--- a/courses.html
+++ b/courses.html
@@ -120,15 +120,15 @@
     <div class="terminal-body"> <br>
       <div class="prompt">Eddie Berman / Northeastern Courses <a href="index.html" style="color: #33ff33;">   (Back)</a><br> <br>
 
-<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> 
+        <!--<div class="prompt">&gt; Phys 7301 Classical Mechanics/Math Methods</div> -->
 <div class="prompt">&gt; Math 7234 Optimization and Complexity</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization</div> 
-<div class="prompt">&gt; Math 5131 Introduction to Mathematical Methods and Modeling</div>  
+<!--<div class="prompt">&gt; Math 5131 Introduction to Mathematical Methods and Modeling</div>-->  
 <div class="prompt">&gt; Phys 5118 General Relativity and Cosmology</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
 <div class="prompt">&gt; Phys 4606 Mathematical and Computational Methods for Physics</div> 
 <div class="prompt">&gt; Math 4571 Advanced Linear Algebra</div> 
-<div class="prompt">&gt; Math 4555 Complex Variables</div> 
+<!--<div class="prompt">&gt; Math 4555 Complex Variables</div> -->
 <div class="prompt">&gt; Math 4545 Fourier Series and PDEs</div> 
 <div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
@@ -136,7 +136,7 @@
 <div class="prompt">&gt; Engw 3307 Advanced Writing in the Sciences</div>  
 <div class="prompt">&gt; Math 3275 Advanced Group Theory</div> 
 <div class="prompt">&gt; Math 3181 Advanced Probability and Statistics</div> 
-<div class="prompt">&gt; Math 3150 Real Analysis</div> 
+<!--<div class="prompt">&gt; Math 3150 Real Analysis</div> -->
 <div class="prompt">&gt; Pols 2358 Current Issues in Cities and Suburbs</div> 
 <div class="prompt">&gt; Math 2321 Calculus 3 For Science and Engineering</div> 
 <div class="prompt">&gt; Phys 2303 Modern Physics</div> 
