--- a/peeps.html
+++ b/peeps.html
@@ -125,6 +125,7 @@
         <div class="prompt">&gt; <a href="https://federico.codes/" style="color: #33ff33;" target="_blank">Federico</a> </div> 
         <div class="prompt">&gt; <a href="https://noahshinn.com/" style="color: #33ff33;" target="_blank">Noah</a> </div> 
         <div class="prompt">&gt; <a href="https://www.rzhu.cc/" style="color: #33ff33;" target="_blank">Ryan</a> </div> 
+        <div class="prompt">&gt; <a href="https://peter.bio/" style="color: #33ff33;" target="_blank">Peter</a> </div> 
 
 
       </div>
