--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <span class="dot green-dot"></span>
     </div>
     <div class="terminal-body"> <br>
-      <div class="prompt">$ Eddie Berman. Telescope Guru, JWST whisperer</div>
+      <div class="prompt">$ Eddie Berman &lt;) Telescope Guru, Cooking with JWST</div>
       <br><div class="input">News</div> 
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
       <div class="prompt">&gt; (01/21/24) ShOpt.jl has been submitted to the astronomical journal! <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">arXiv</a></div> 
